--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
              <nav class="header-navigation">
                <a href="./index.html" class="link header-logo"><span class="span-web">Web</span><span class="span-studio">Studio</span></a>                            
               <ul class="header-list list">
-                <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
+                <li class="header-item"><a href="./index.html" class="header-link link current">Студия</a></li>
                 <li class="header-item"><a href="./portfolio.html" class="header-link link">Портфолио</a></li>
                 <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
               </ul>
@@ -104,13 +104,22 @@
             <div class="container">
             <ul class="work-list">
               <li class="work-item list">
+                <div class="work-item-wrap">
                 <img src="./images/img1.jpg" alt="современные технологии" width="370">
+                <p class="work-top-text">Десктопные приложения</p>
+              </div>
               </li>
               <li class="work-item list">
+                <div class="work-item-wrap">
                 <img src="./images/img2.jpg" alt="современные технологии" width="370">
+                <p class="work-top-text">Мобильные приложения</p>
+              </div>
               </li>
               <li class="work-item list">
+                <div class="work-item-wrap">
                 <img src="./images/img3.jpg" alt="современные технологии" width="370">
+                <p class="work-top-text">Дизайнерские решения</p>
+              </div>
               </li>
             </ul>
             </div>
@@ -371,6 +380,15 @@
             </ul>
           </div>
         </footer>
+        <div class="backdrop">
+          <div class="modal">
+            <button type="button" class="modal-close">
+              <svg class="close-icon" width="30" heigth="30">
+                <use href="./images/svg/icons.svg#icon-close"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
        </body>
       
   
