--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
           <a href="./index.html" class="link header-logo"><span class="span-web">Web</span><span class="span-studio">Studio</span></a>                            
          <ul class="header-list list">
            <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
-           <li class="header-item"><a href="./portfolio.html" class="header-link link">Портфолио</a></li>
+           <li class="header-item"><a href="./portfolio.html" class="header-link link current">Портфолио</a></li>
            <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
          </ul>
          </nav>
@@ -75,47 +75,74 @@
         <div class="container project-container">
 <ul class="project-list">
     <li class="project-item list">
+      <div class="project-item-wrap">
     <img src="./images/tecnokriak.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+    <p class="project-text-top">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+  </div>
     <h2 class="project-title">Технокряк</h2>
     <p class="project-text">Веб-сайт</p>
 </li>
 <li class="project-item list">
+  <div class="project-item-wrap">
     <img src="./images/new_orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+    <p class="project-text-top">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+  </div>
     <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
     <p class="project-text">Дизайн</p>
 </li>
 <li class="project-item list">
+  <div class="project-item-wrap">
     <img src="./images/seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
+    <p class="project-text-top">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+  </div>
     <h2 class="project-title">Ресторан Seafood</h2>
     <p class="project-text">Приложение</p>
 </li>
 <li class="project-item list">
+  <div class="project-item-wrap">
     <img src="./images/prime.jpg" alt="Проект Prime" width="370" height="294">
+    <p class="project-text-top">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+  </div>
     <h2 class="project-title">Проект Prime</h2>
     <p class="project-text">Маркетинг</p>
 </li>
 <li class="project-item list">
+  <div class="project-item-wrap">
     <img src="./images/boxes.jpg" alt="Проект Boxes" width="370" height="294">
+    <p class="project-text-top">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+  </div>
     <h2 class="project-title">Проект Boxes</h2>
     <p class="project-text">Приложение</p>
 </li>
 <li class="project-item list">
+  <div class="project-item-wrap">
     <img src="./images/borders.jpg" alt="Inspiration has no Borders" width="370" height="294">
+  <p class="project-text-top">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+  </div>
     <h2 class="project-title">Inspiration has no Borders</h2>
     <p class="project-text">Веб-сайт</p>
 </li>
 <li class="project-item list">
+  <div class="project-item-wrap">
     <img src="./images/edition.jpg" alt="Издание Limited Edition" width="370" height="294">
+  <p class="project-text-top">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+  </div>
     <h2 class="project-title">Издание Limited Edition</h2>
     <p class="project-text">Дизайн</p>
 </li>
 <li class="project-item list">
+  <div class="project-item-wrap">
     <img src="./images/lab.jpg" alt="Проект LAB" width="370" height="294">
+  <p class="project-text-top">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+  </div>
     <h2 class="project-title">Проект LAB</h2>
     <p class="project-text">Маркетинг</p>
 </li>
 <li class="project-item list">
+  <div class="project-item-wrap">
     <img src="./images/business.jpg" alt="Growing Business" width="370" height="294">
+  <p class="project-text-top">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+  </div>
     <h2 class="project-title">Growing Business</h2>
     <p class="project-text">Приложение</p>
 </li>
